--- a/src/View/TotalApptReport.fxml
+++ b/src/View/TotalApptReport.fxml
@@ -9,13 +9,14 @@
     <children>
         <Label fx:id="reportTypeMonth" layoutX="172.0" layoutY="5.0" textFill="WHITE"/>
         <Button fx:id="backButton" layoutX="29.0" layoutY="26.0" mnemonicParsing="false"
-                onAction="#goToReportsPage" text="BACK"/>
+                onAction="#goToReportsPage" text="BACK" style="-fx-background-color: #40E1F6;"/>
         <RadioButton fx:id="typeRadio" layoutX="200" layoutY="70" textFill="WHITE" toggleGroup="$reportToggleGroup">
             <toggleGroup>
                 <ToggleGroup fx:id="reportToggleGroup"/>
             </toggleGroup>
         </RadioButton>
         <RadioButton fx:id="monthRadio" layoutX="300" layoutY="70" textFill="WHITE" toggleGroup="$reportToggleGroup"/>
-        <Button fx:id="generateButton" onAction="#generateReport" layoutX="220" layoutY="120"/>
+        <Button fx:id="generateButton" onAction="#generateReport" layoutX="220" layoutY="120"
+                style="-fx-background-color: #40E1F6;"/>
     </children>
 </AnchorPane>
