--- a/src/View/CreateCustomerPage.fxml
+++ b/src/View/CreateCustomerPage.fxml
@@ -12,7 +12,8 @@
          </font>
       </Label>
       <Button fx:id="backToCustomersMainPage" layoutX="23.0" layoutY="33.0" mnemonicParsing="false"
-              onAction="#goToCustomersMainPage" prefHeight="25.0" prefWidth="40.0"/>
+              onAction="#goToCustomersMainPage" prefHeight="25.0" prefWidth="40.0"
+              style="-fx-background-color: #40E1F6;"/>
       <Label fx:id="nameLabel" layoutX="58.0" layoutY="109.0" text="Name: " textFill="WHITE" />
       <Label fx:id="phoneLabel" layoutX="57.0" layoutY="157.0" text="Phone: " textFill="WHITE" />
       <Label fx:id="addressLabel" layoutX="53.0" layoutY="206.0" text="Address: " textFill="WHITE" />
@@ -26,7 +27,7 @@
       <ComboBox fx:id="countryComboBox" layoutX="142.0" layoutY="299.0" onAction="#countrySelection" prefWidth="150.0"/>
       <ComboBox fx:id="divisionComboBox" layoutX="142.0" layoutY="347.0" prefWidth="150.0" />
       <Button fx:id="addCustomerButton" layoutX="176.0" layoutY="396.0" mnemonicParsing="false"
-              onAction="#addCustomer"/>
+              onAction="#addCustomer" style="-fx-background-color: #40E1F6;"/>
 
    </children>
 </AnchorPane>
