--- a/src/View/UpdateAppointmentPage.fxml
+++ b/src/View/UpdateAppointmentPage.fxml
@@ -8,19 +8,19 @@
             style="-fx-background-color: #1F1F1F;" xmlns="http://javafx.com/javafx/17.0.2-ea"
             fx:controller="Controller.UpdateAppointmentPageController">
    <children>
-      <Label fx:id="header" layoutX="420.0" layoutY="32.0" text="UPDATE APPOINTMENT" textFill="WHITE"/>
-      <Label fx:id="apptTitleLabel" layoutX="38.0" layoutY="96.0" text="TITLE" textFill="WHITE"/>
-      <Label fx:id="apptStartDateLabel" layoutX="38.0" layoutY="231.0" text="START DATE " textFill="WHITE"/>
-      <Label fx:id="apptDescriptionLabel" layoutX="262.0" layoutY="97.0" text="DESCRIPTION" textFill="WHITE"/>
-      <Label fx:id="apptLocationLabel" layoutX="535.0" layoutY="96.0" text="LOCATION" textFill="WHITE"/>
-      <Label fx:id="apptendDateLabel" layoutX="38.0" layoutY="298.0" text="END DATE" textFill="WHITE"/>
-      <Label fx:id="apptIDLabel" disable="true" layoutX="37.0" layoutY="160.0" text="APPT ID" textFill="WHITE"/>
-      <Label fx:id="apptStartTimeLabel" layoutX="388.0" layoutY="231.0" text="START TIME" textFill="WHITE"/>
-      <Label fx:id="apptCustomerIDLabel" layoutX="683.0" layoutY="281.0" text="CUSTOMER ID" textFill="WHITE"/>
-      <Label fx:id="apptEndTimeLabel" layoutX="388.0" layoutY="298.0" text="END TIME" textFill="WHITE"/>
-      <Label fx:id="apptUserIdLabel" layoutX="684.0" layoutY="332.0" text="USER ID" textFill="WHITE"/>
-      <Label fx:id="apptContactLabel" layoutX="685.0" layoutY="229.0" text="CONTACT" textFill="WHITE"/>
-      <Label fx:id="apptTypeLabel" layoutX="285.0" layoutY="152.0" text="TYPE" textFill="WHITE"/>
+       <Label fx:id="header" layoutX="420.0" layoutY="32.0" textFill="WHITE"/>
+       <Label fx:id="apptTitleLabel" layoutX="38.0" layoutY="96.0" textFill="WHITE"/>
+       <Label fx:id="apptStartDateLabel" layoutX="38.0" layoutY="231.0" textFill="WHITE"/>
+       <Label fx:id="apptDescriptionLabel" layoutX="262.0" layoutY="97.0" textFill="WHITE"/>
+       <Label fx:id="apptLocationLabel" layoutX="535.0" layoutY="96.0" textFill="WHITE"/>
+       <Label fx:id="apptendDateLabel" layoutX="38.0" layoutY="298.0" textFill="WHITE"/>
+       <Label fx:id="apptIDLabel" disable="true" layoutX="37.0" layoutY="160.0" textFill="WHITE"/>
+       <Label fx:id="apptStartTimeLabel" layoutX="388.0" layoutY="231.0" textFill="WHITE"/>
+       <Label fx:id="apptCustomerIDLabel" layoutX="683.0" layoutY="281.0" textFill="WHITE"/>
+       <Label fx:id="apptEndTimeLabel" layoutX="388.0" layoutY="298.0" textFill="WHITE"/>
+       <Label fx:id="apptUserIdLabel" layoutX="684.0" layoutY="332.0" textFill="WHITE"/>
+       <Label fx:id="apptContactLabel" layoutX="685.0" layoutY="229.0" textFill="WHITE"/>
+       <Label fx:id="apptTypeLabel" layoutX="285.0" layoutY="152.0" textFill="WHITE"/>
       <TextField fx:id="titleTextfield" layoutX="80.0" layoutY="93.0" />
       <TextField fx:id="descriptionTextfield" layoutX="348.0" layoutY="92.0" />
       <TextField fx:id="locationTextfield" layoutX="608.0" layoutY="92.0" />
@@ -34,12 +34,15 @@
       <ComboBox fx:id="customerIDComboBox" layoutX="776.0" layoutY="277.0" prefWidth="150.0" />
       <ComboBox fx:id="userIDComboBox" layoutX="776.0" layoutY="329.0" prefWidth="150.0" />
       <TextField fx:id="typeTextfield" layoutX="348.0" layoutY="148.0" />
-      <Button fx:id="saveButton" layoutX="419.0" layoutY="384.0" mnemonicParsing="false" onAction="#saveUpdateAppointment" text="SAVE" />
-      <Button fx:id="backButton" layoutX="26.0" layoutY="19.0" mnemonicParsing="false" onAction="#goToAppointmentsMainPage" text="BACK">
+       <Button fx:id="saveButton" layoutX="419.0" layoutY="384.0" mnemonicParsing="false"
+               onAction="#saveUpdateAppointment" style="-fx-background-color: #40E1F6;"/>
+       <Button fx:id="backButton" layoutX="26.0" layoutY="19.0" mnemonicParsing="false"
+               onAction="#goToAppointmentsMainPage" style="-fx-background-color: #40E1F6;">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <Button fx:id="cancelButton" layoutX="498.0" layoutY="384.0" mnemonicParsing="false" onAction="#goToAppointmentsMainPage" text="CANCEL" />
+       <Button fx:id="cancelButton" layoutX="498.0" layoutY="384.0" mnemonicParsing="false"
+               onAction="#goToAppointmentsMainPage" style="-fx-background-color: #40E1F6;"/>
    </children>
 </AnchorPane>
